fix 17oct2020 fonticon MediaQuery

--- a/sass/_menu_page.scss
+++ b/sass/_menu_page.scss
@@ -21,6 +21,9 @@ html {
       height: 250px;
       position: relative;
       margin: auto;
+      @include bp(lg) { //mediaQuery pour écran large
+        padding-top: 20px;
+      } 
 
       img {
         width: 350px;
