--- a/sass/components/_homepage-loader.scss
+++ b/sass/components/_homepage-loader.scss
@@ -12,8 +12,15 @@
 
 .heart2 {
   z-index: 999;
-  color : #FF0000;
-  opacity: 0;   
+  opacity: 0;
+  background: linear-gradient(
+          to left top,
+          $color-primary-2 40%,
+          $color-primary-1,
+        );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 } 
 
 .heart2:hover {
@@ -45,13 +52,13 @@
 //--- ANIMATION MENU --- Affichage des blocs : Entrées, Plats, Desserts.
 
 .menu_wrapper {
-  -webkit-animation: 1.2s slide ease-in-out;
-          animation: 1.2s slide ease-in-out;
+  -webkit-animation: 1.2s menuSlide ease-in-out;
+          animation: 1.2s menuSlide ease-in-out;
   -webkit-animation-fill-mode: backwards; //point de depart de l'animation se cale sur l'apparence keyframe from soit opacity 0
           animation-fill-mode: backwards; 
 }
 
-@-webkit-keyframes slide {
+@-webkit-keyframes menuSlide {
   from {
     -webkit-transform: translateY(30px);
             transform: translateY(30px);
@@ -64,7 +71,7 @@
   }
 }
 
-@keyframes slide {
+@keyframes menuSlide {
   from {
     -webkit-transform: translateY(30px);
             transform: translateY(30px);
