--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,6 +1,7 @@
 //--- mixin pour Media Queries 
   
-@mixin bp($breakpoint) { // Mixin pour appeler les breakpoints facilement avec utilisation de la map créee dans _variables
+@mixin bp($breakpoint) { 
+    // Mixin pour appeler les breakpoints facilement avec utilisation de la map créee dans _variables
     @if map-has-key($breakpoints, $breakpoint) {
         $value: map-get($breakpoints, $breakpoint);
          
