--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,30 +7,28 @@ $color-white: white;
 $color-bg: #f6f6f6;
 $color-bg-footer: #353535;
 
-//Fonts families
+//Fonts families 
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap"); //src: fonts.google.com
 
 $logo-title-font: "Shrikhand";
 $txt-font: "Roboto", arial, sans-serif;
 
-//sizes
+//sizes 
 $fontsize-regular: 1rem;
 $logo-title-size: 1.5rem;
 $fontsize-small: 0.9rem;
 
-//Titres
+//Titres infos
 $h1-font: $logo-title-font $logo-title-size; //titre principal des pages du site
 $h2-font: $logo-title-font bold $logo-title-size; //homepage : nom des rubriques
 $h3-font: $logo-title-font bold; //homepage : nom des retaurants
 $h4-font: $txt-font $fontsize-regular; //nom des catégories : entrées, plat, dessert
 $h5-font: $txt-font $fontsize-regular bold; //nom des plats
 
-//---- Media-queries : map breakpoints ---- 
+//---- Media-queries : map breakpoints ----//
 $breakpoints: (  
   sm: 576px,    // Small tablets and large smartphones (landscape view)
   md: 768px,    // Small tablets (portrait view)
   lg: 992px,    // Tablets and small desktops
   xl: 1200px    // Large tablets and desktops
 );
-
-
