--- a/sass/components/_heart-like.scss
+++ b/sass/components/_heart-like.scss
@@ -15,10 +15,10 @@
     z-index: 999;
     opacity: 0;
     background: linear-gradient(
-            to left top,
-            $color-primary-2 40%,
-            $color-primary-1,
-          );
+      to left top,
+      $color-primary-2 40%,
+      $color-primary-1
+    );
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -39,11 +39,10 @@
   transition: opacity 0.3s;
 }
 
-.heart:hover .heart2 { 
+.heart:hover .heart2 {
   opacity: 1;
 }
 
 .heart:hover .heart1 {
   opacity: 0;
 }
-
