--- a/sass/pages/_mentions_legales.scss
+++ b/sass/pages/_mentions_legales.scss
@@ -4,9 +4,10 @@ body {
     margin: auto;
     max-width: 350px;
 
-    @include bp(lg) { //mediaQuery pour écran large
-        max-width: 100%;
-    } 
+    @include bp(lg) {
+      //mediaQuery pour écran large
+      max-width: 100%;
+    }
 
     .legal_notice {
       padding: 20px 10px 0;
@@ -26,7 +27,7 @@ body {
         padding-bottom: 60px;
         font-size: $logo-title-size;
       }
-      
+
       h3 {
         background-color: $color-white;
         border-radius: 50px;
@@ -36,9 +37,10 @@ body {
         text-align: center;
         margin: auto;
 
-        @include bp(lg) { //mediaQuery pour écran large
-        width: 30%;
-        } 
+        @include bp(lg) {
+          //mediaQuery pour écran large
+          width: 30%;
+        }
       }
 
       .legal_notice_bloc {
@@ -50,7 +52,6 @@ body {
           margin-block-end: 0;
         }
       } //end legal_notice_bloc
-
     } //end legal_notice
   } //end legal_notice_page
 } //end body
