--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@
 @import "layout/header";
 @import "components/btn-explore";
 @import "components/btn-order";
-@import "components/heart-anim";
+@import "components/heart-like";
 @import "components/homepage-loader";
 @import "components/menu-arrivee-anim";
 @import "components/menu-check-anim.scss";
