--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,7 +10,7 @@
 @import "components/heart-like";
 @import "components/homepage-loader";
 @import "components/menu-arrivee-anim";
-@import "components/menu-check-anim.scss";
+@import "components/menu-check-anim";
 @import "pages/homepage";
 @import "pages/menu_page";
 @import "pages/mentions_legales";
